gobject/gtype.c: Emphasize use of priv in member and use g_return_val_if_fail

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=597785

Signed-off-by: Javier Jardón <jjardon@gnome.org>